[tool.poetry]
name = "FormMatch"
version = "0.1.0"
description = ""
authors = ["KuksovSV <ser.kuksov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = {extras = ["email"], version = "^2.5.2"}
phonenumbers = "^8.13.26"
motor = "^3.3.2"
pydantic-settings = "^2.1.0"


[tool.poetry.group.test.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
